# speedo

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  TESTING.md  build_map.py  pyproject.toml  scrape_railrat.py  speedo_ctl.py
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
data/: amtrak_stations.geojson  observations.jsonl  roster_AcelaExpress.json  roster_Adirondack.json  roster_AmtrakCascades.json  roster_BlueWaterMichiganService.json  roster_Borealis.json  roster_CapitolCorridor.json  roster_CarolinianPiedmont.json  roster_CityofNewOrleans.json  roster_Downeaster.json  roster_EmpireBuilder.json  roster_EmpireService.json  roster_EthanAllenExpress.json  roster_Floridian.json  roster_Hiawatha.json  roster_KeystoneService.json  roster_LakeShoreLimited.json  roster_LincolnServiceIllinoisService.json  roster_LincolnServiceMissouriRiverRunner.json  roster_MapleLeaf.json  roster_NortheastRegional.json  roster_PacificSurfliner.json  roster_SalukiIllinoisService.json  roster_SilverMeteor.json  roster_Vermonter.json  roster_WolverineMichiganService.json  station_events.jsonl
speedo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_binning.py  test_build_map.py  test_geometry.py  test_make_index.py  test_parse_positions.py  test_parse_station_events.py  test_postprocess.py  test_profile.py  test_profile_data.py  test_range_filter.py  test_render.py  test_reparse.py  test_route_identity.py  test_speedo_ctl.py  test_stations.py  test_storage.py  test_wayback_cache.py
(+39 files in other folders)
