[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "speedo"
version = "0.1.0"
description = "Maps how fast Amtrak trains actually go, from RailRat position reports"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools]
py-modules = ["scrape_railrat", "build_map", "speedo_ctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
